fix overflow issue and reduce size of images

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,11 @@
           box-sizing: border-box;
 }
 
+html, body{
+  position: relative;
+  overflow: hidden;
+}
+
 html {
   font-size: 10px;
 }
@@ -13,8 +18,10 @@ html {
 body {
   background-image: url(/img/matthew-t-rader-unZsqbshzgI-unsplash.jpg);
   background-size: cover;
+  max-width: 100%;
   width: 100%;
   height: 100vh;
+  margin: 0 auto;
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
